--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -10,7 +10,7 @@ h1{
     color: #fff;	
     border: 1px solid  #0FC1B7;
     cursor:pointer;
-   font-size: 1rem;
+   
     margin: 0 auto;
     text-decoration: none;
     background-color: #29314A;
@@ -21,13 +21,14 @@ h1{
     margin-top: 20px;
     padding:10px; 
     width:30%;
+    font-size: 1.2rem;
 }
 
 .begin-button:hover { 
     background-color: #0FC1B7;    
 }
 
-.level-button{width:20%}
+.level-button{width:30%;font-size: 0.9rem;}
 
 .level-button:focus {
     background-color: #0FC1B7;
