--- a/src/pages/Question.css
+++ b/src/pages/Question.css
@@ -6,20 +6,22 @@
  }
 
 
-input[type=radio]{
-    appearance: none;
-        border-radius: 50%;
-        width: 12px;
-        height: 12px;
-        margin-right: 10px;
-        border: 2px solid #0FC1B7;    
-        position: relative;  
-       ;
+.option-button{
+    margin:15px;
+    color: #fff;	
+    border: 1px solid  #0FC1B7;
+    cursor:pointer;
+    margin:10px;
+    padding:10px; 
+    width:15%;
+    font-size: 1rem;
+
+   
+    background-color: #29314A;
       }
       
-input[type=radio]:hover{
-         width: 16px;
-         height: 16px;
+.option-button:hover{
+        
         background-color:#0FC1B7;
         border: 2px solid #29314A;
         cursor:pointer;
