--- a/src/pages/Question.css
+++ b/src/pages/Question.css
@@ -7,7 +7,7 @@
 
 
 .option-button{
-    margin:15px;
+    
     color: #fff;	
     border: 1px solid  #0FC1B7;
     cursor:pointer;
@@ -34,7 +34,17 @@
 
 @media screen and (max-width: 800px) {
   .question-wrapper {
-    font-size: 0.7rem;  },
-    .question-card{padding:5px}
-    
+    font-size: 0.9rem; 
+margin:0 auto;	
+width:120%; 
+},
+.option-button{color:red}
+}
+
+@media screen and (max-width: 1000px) {
+ 
+    .option-button{
+      width:30%;
+      margin:10px;
+    }
 }
