--- a/src/pages/Question.css
+++ b/src/pages/Question.css
@@ -14,7 +14,7 @@
     margin:10px;
     padding:10px; 
     width:15%;
-    font-size: 1rem;
+    font-size: 0.8rem;
 
    
     background-color: #29314A;
@@ -36,9 +36,9 @@
   .question-wrapper {
     font-size: 0.9rem; 
 margin:0 auto;	
-width:120%; 
+width:%; 
 },
-.option-button{color:red}
+.option-button{ font-size: 0.7rem}
 }
 
 @media screen and (max-width: 1000px) {
